--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,1 +1,7 @@
+@if (isLoading) {
+    <div class="loading-page">
+        <app-loading></app-loading>
+    </div>
+}
+
 <router-outlet></router-outlet>
