--- a/ClientApp/src/app/_shared/navbar/navbar.component.html
+++ b/ClientApp/src/app/_shared/navbar/navbar.component.html
@@ -56,7 +56,7 @@
       </button>
       <div class="p-4 md:p-5 text-center">
         <svg
-          class="mx-auto mb-4 text-teal-500 w-12 h-12"
+          class="mx-auto mb-4 text-black w-12 h-12"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -88,7 +88,7 @@
             data-modal-hide="popup-modal"
             type="button"
             (click)="newSession()"
-            class="text-white bg-teal-500 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm items-center px-5 py-2.5 text-center w-6/12"
+            class="text-white hover:bg-gray-700 bg-black focus:ring-4 focus:outline-none focus:ring-black font-medium rounded-lg text-sm items-center px-5 py-2.5 text-center w-6/12"
           >
             New Session
           </button>
