--- a/ClientApp/src/app/_shared/navbar/navbar.component.scss
+++ b/ClientApp/src/app/_shared/navbar/navbar.component.scss
@@ -1,5 +1,4 @@
 .nav-bar {
-    position: absolute;
     height: 3.75rem;
     background-color: transparent;
     padding: 0 2.75rem;
@@ -48,4 +47,14 @@
             height: 3.75rem;
         }
     }
+}
+
+.bg-black {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) /* #000000 */;
+}
+
+.hover\:bg-gray-700:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity, 1)) /* #374151 */;
 }
