--- a/ClientApp/src/app/components/home/msg-box/msg-box.component.scss
+++ b/ClientApp/src/app/components/home/msg-box/msg-box.component.scss
@@ -3,7 +3,8 @@ $bg: transparent;
 $bg_hover: #ffffff;
 $clr: #ffffff;
 $clr_hover: #000000;
-$base-colour: #0d9488;
+$base-colour: #ffffff;
+$base-colour_hover: #000000;
 
 .msg-box {
     border-radius: 0.75rem;
@@ -24,6 +25,7 @@ $base-colour: #0d9488;
         font-size: 24px;
         color: $base-colour;
         margin-bottom: 0.5rem;
+        transition: $time ease-in-out;
     }
 
     &:hover {
@@ -31,6 +33,10 @@ $base-colour: #0d9488;
 
         & > p {
             color: $clr_hover;
+        }
+
+        & > span {
+            color: $base-colour_hover;
         }
     }
 }
