--- a/ClientApp/src/app/components/home/home.component.html
+++ b/ClientApp/src/app/components/home/home.component.html
@@ -56,12 +56,12 @@
               </div>
               } @else {
               <div class="flex lg:justify-center">
-                <!-- <app-chat-view
+                <app-chat-view
                   [messages]="messages"
                   [isLoading]="isLoading"
                   [config]="selectedConfig"
                   (submitPrompt)="submitPrompt($event)"
-                ></app-chat-view> -->
+                ></app-chat-view>
               </div>
               }
             </div>
