--- a/ClientApp/src/app/components/home/chat-view/requrements-form/requrements-form.component.html
+++ b/ClientApp/src/app/components/home/chat-view/requrements-form/requrements-form.component.html
@@ -1,1 +1,263 @@
-<p>requrements-form works!</p>
+<div class="form">
+  <h1 class="text-xl font-bold">Please answer to this questions.</h1>
+  <br />
+  <form action="" [formGroup]="reqForm">
+    <div class="relative mb-6">
+        <h3 class="font-sans text-base">
+          <strong>Question 1: </strong>What is the zip code in your area?
+        </h3>
+        <div>
+          <input
+            type="text"
+            formControlName="zip_code"
+            class="q2 text-base text-gray-500 bg-transparent border-0 border-b-2 border-gray-200 appearance-none focus:outline-none focus:ring-0 focus:border-gray-200 my-3"
+          />
+        </div>
+      </div>
+
+    <!-- <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 1: </strong>New or Used car?
+      </h3>
+      <ul
+        class="items-center q1 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg grid grid-cols-2 my-3"
+      >
+        <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r">
+          <div class="flex items-center ps-3">
+            <input
+              type="radio"
+              value="New"
+              id="conditionNew"
+              formControlName="condition"
+              class="w-4 h-4 accent-yellow-500 text-yellow-600 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label
+              for="conditionNew"
+              class="w-full accent-yellow-500 py-3 ms-2 text-sm font-medium text-gray-900"
+              >New</label
+            >
+          </div>
+        </li>
+        <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r">
+          <div class="flex items-center ps-3">
+            <input
+              type="radio"
+              value="Used"
+              id="conditionUsed"
+              formControlName="condition"
+              class="w-4 h-4 accent-yellow-500 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label
+              for="conditionUsed"
+              class="w-full accent-yellow-500 py-3 ms-2 text-sm font-medium text-gray-900"
+              >Used</label
+            >
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 2: </strong>Vehicle brand and model the user likes?
+      </h3>
+      <div>
+        <input
+          type="text"
+          formControlName="brand"
+          class="q2 text-base text-gray-500 bg-transparent border-0 border-b-2 border-gray-200 appearance-none focus:outline-none focus:ring-0 focus:border-gray-200 my-3"
+          (change)="getBrands($event)"
+          (click)="getBrands($event)"
+          (input)="getBrands($event)"
+        />
+        @if (isvisibleBrand) {
+        <div
+          id="brand-autocompleate"
+          class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow q2 max-h-80 my-3 mx-2 overflow-y-auto absolute top-16 left-0"
+        >
+          <ul class="py-2 text-sm text-gray-700">
+            @for(brand of selectedBrand; track brand) {
+            <li
+              class="block px-4 py-2 hover:bg-yellow-500 hover:text-white text-base"
+              (click)="fillBrand(brand)"
+            >
+              {{ brand }}
+            </li>
+            }
+          </ul>
+        </div>
+        }
+      </div>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 3: </strong>Vehicle category they are interested in?
+        Please specify the different categories so that the user can select the
+        one they want from a predefined listing.
+      </h3>
+      <ul
+        class="items-center w-full text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg grid q3 my-3"
+        formArrayName="type"
+      >
+        @for (type of types; track $index) {
+        <li
+          class="w-full py-6 border-b border-gray-200 sm:border-b h-36 sm:border-r"
+        >
+          <div class="flex items-center ps-3">
+            <input
+              type="checkbox"
+              [value]="type.name"
+              [formControlName]="$index"
+              [id]="'type' + $index"
+              class="w-4 h-4 text-yellow-600 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label [for]="'type' + $index" class="px-2">
+              <div class="flex flex-col">
+                <img class="img" [src]="type.img" alt="" />
+                <p
+                  class="w-full py-3 ms-2 text-sm text-center font-medium text-gray-900"
+                >
+                  {{ type.name }}
+                </p>
+              </div>
+            </label>
+          </div>
+        </li>
+        }
+      </ul>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 4: </strong>What is the budget for their vehicle?
+        Please specify budget ranges in AUD so that the user can select the one
+        they want from a predefined listing.
+      </h3>
+      <ul
+        class="items-center w-full text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg grid q4 my-3"
+      >
+        @for (budget of budgets; track $index) {
+        <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r">
+          <div class="flex items-center ps-3">
+            <input
+              type="radio"
+              [value]="budget"
+              [id]="'budget' + $index"
+              formControlName="budget"
+              class="w-4 h-4 accent-yellow-500 text-yellow-600 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label
+              [for]="'budget' + $index"
+              class="w-full accent-yellow-500 py-3 ms-2 text-sm font-medium text-gray-900"
+              >{{ budget }}</label
+            >
+          </div>
+        </li>
+        }
+      </ul>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 5: </strong>Any preference for electric only, petrol
+        only or mix?
+      </h3>
+      <ul
+        formArrayName="fuelType"
+        class="items-center w-full text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg grid q5 my-3"
+      >
+        @for (fuel of fuels; track $index) {
+        <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r">
+          <div class="flex items-center ps-3">
+            <input
+              type="checkbox"
+              [value]="fuel"
+              [id]="'fuel' + $index"
+              [formControlName]="$index"
+              class="w-4 h-4 accent-yellow-500 text-yellow-600 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label
+              [for]="'fuel' + $index"
+              class="w-full accent-yellow-500 py-3 ms-2 text-sm font-medium text-gray-900"
+              >{{ fuel }}</label
+            >
+          </div>
+        </li>
+        }
+      </ul>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 6: </strong>What is your seating requirement?
+      </h3>
+      <ul
+        class="items-center w-full text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg grid q6 my-3"
+      >
+        @for (seat of seatCount; track $index) {
+        <li class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r">
+          <div class="flex items-center ps-3">
+            <input
+              type="radio"
+              [value]="seat"
+              [id]="'seat' + $index"
+              formControlName="seating"
+              class="w-4 h-4 accent-yellow-500 text-yellow-600 bg-gray-100 border-gray-300 focus:ring-yellow-500 focus:ring-2"
+            />
+            <label
+              [for]="'seat' + $index"
+              class="w-full accent-yellow-500 py-3 ms-2 text-sm font-medium text-gray-900"
+              >{{ seat }}</label
+            >
+          </div>
+        </li>
+        }
+      </ul>
+    </div>
+    <div class="relative mb-6">
+      <h3 class="font-sans text-base">
+        <strong>Question 7: </strong>What is intended purpose of the vehicle?
+        Please specify the different categories so that the user can select the
+        one they want from a predefined listing.
+      </h3>
+      <input
+        type="text"
+        formControlName="purpose"
+        class="block p-2.5 q7 text-base text-gray-500 bg-transparent border-0 border-b-2 border-gray-200 appearance-none focus:outline-none focus:ring-0 focus:border-gray-200 peer"
+        (change)="getPerpuses($event)"
+        (click)="getPerpuses($event)"
+        (input)="getPerpuses($event)"
+      />
+      @if (isvisiblePurpose) {
+      <div
+        id="purpose-autocompleate"
+        class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow q7 max-h-80 my-3 mx-2 absolute top-16 left-0"
+      >
+        <ul class="py-2 text-sm text-gray-700">
+          @for(purpose of selectedPurpose; track purpose){
+          <li
+            class="block px-4 py-2 hover:bg-yellow-500 hover:text-white text-base"
+            (click)="fillPurpose(purpose)"
+          >
+            {{ purpose }}
+          </li>
+          }
+        </ul>
+      </div>
+      }
+    </div> -->
+
+    <div class="flex mt-4">
+      <button
+        type="button"
+        (click)="initForm()"
+        class="text-gray-900 bg-white hover:bg-gray-100 focus:outline-none focus:ring-4 border border-gray-200 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 text-center m-2 w-full"
+      >
+        Reset
+      </button>
+      <button
+        type="button"
+        (click)="generateText()"
+        class="text-white bg-black hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center m-2 w-full"
+      >
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
