--- a/ClientApp/src/app/components/home/chat-view/chat-view.component.scss
+++ b/ClientApp/src/app/components/home/chat-view/chat-view.component.scss
@@ -1,3 +1,5 @@
+$user-chat-color: #000000;
+
 @mixin horizontal-scroll {
   &::-webkit-scrollbar {
     width: 12px;
@@ -66,11 +68,12 @@
   }
 
   &.user {
-    background-color: #203b54;
+    background-color: $user-chat-color;
     align-self: flex-end;
     border-bottom-right-radius: 0;
     color: #ffffff;
     padding: 1rem 1.5rem !important;
+    overflow: hidden !important;
 
     & > p {
       font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -151,7 +154,7 @@
     }
 
     &.user {
-      background-color: #203b54;
+      background-color: $user-chat-color;
       align-self: flex-end;
       border-bottom-right-radius: 0;
       color: #ffffff;
@@ -217,7 +220,7 @@
     }
 
     &.user {
-      background-color: #203b54;
+      background-color: $user-chat-color;
       align-self: flex-end;
       border-bottom-right-radius: 0;
       color: #ffffff;
@@ -283,7 +286,7 @@
     }
 
     &.user {
-      background-color: #203b54;
+      background-color: $user-chat-color;
       align-self: flex-end;
       border-bottom-right-radius: 0;
       color: #ffffff;
@@ -305,5 +308,21 @@
 }
 
 .fill-spinner {
-  fill: #203b54;
+  fill: #000000;
+}
+
+.scroller-for-dark {
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: orange;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: blue;    
+    border-radius: 20px;      
+    border: 3px solid orange; 
+  }
 }
