--- a/ClientApp/src/app/components/home/home.component.scss
+++ b/ClientApp/src/app/components/home/home.component.scss
@@ -1,4 +1,4 @@
-$base-colour: #0d9488;
+$base-colour: #000000;
 $prompt-font-color: #262626;
 
 // $anime: linear-gradient(-45deg, #005660, #008081, #229389, #008081, #005660);
