--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&display=swap');
 
