--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import url('./tailwind.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&display=swap');
 
