--- a/ClientApp/src/app/components/home/chat-view/chat-view.component.scss
+++ b/ClientApp/src/app/components/home/chat-view/chat-view.component.scss
@@ -84,6 +84,7 @@ $user-chat-color: #000000;
       font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       font-size: 16px;
       line-height: 1rem;
+      overflow: hidden !important;
     }
   }
 
